WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190563
[iOS] Can't select text after dismissing the keyboard when changing focus
https://bugs.webkit.org/show_bug.cgi?id=190563
Summary
[iOS] Can't select text after dismissing the keyboard when changing focus
Wenson Hsieh
Reported
2018-10-14 15:03:50 PDT
Comment hidden (obsolete)
<
rdar://problem/42354250
>
Attachments
Patch
(19.44 KB, patch)
2018-10-14 16:48 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix WPE/GTK builds
(19.19 KB, patch)
2018-10-14 16:54 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Rebase on trunk
(19.09 KB, patch)
2018-10-15 12:08 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-10-14 16:48:20 PDT
Created
attachment 352283
[details]
Patch
Wenson Hsieh
Comment 2
2018-10-14 16:50:04 PDT
<
rdar://problem/44613559
>
Wenson Hsieh
Comment 3
2018-10-14 16:54:59 PDT
Created
attachment 352285
[details]
Fix WPE/GTK builds
Wenson Hsieh
Comment 4
2018-10-15 12:08:49 PDT
Created
attachment 352355
[details]
Rebase on trunk
WebKit Commit Bot
Comment 5
2018-10-15 12:47:12 PDT
Comment on
attachment 352355
[details]
Rebase on trunk Clearing flags on attachment: 352355 Committed
r237135
: <
https://trac.webkit.org/changeset/237135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug